--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
     "vuetify": "^2.5.8",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
