--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment-timezone": "^0.5.33",
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
+    "vue-router": "^3.5.2",
     "vuetify": "^2.5.8",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3",
